Changeset to project structure